BUILD - updated home page asset to ensure nav is readable, and included section to link to Shop

--- a/src/Home/style/Home.module.scss
+++ b/src/Home/style/Home.module.scss
@@ -8,11 +8,26 @@
     position: absolute;
     top: 0;
     z-index: 0;
+
+    display: flex;
+    justify-content: flex-start;
+    .homeSection {
+        padding: 1rem;
+        border-radius: 10px;
+        background-color: rgb(237, 236, 236);
+    }
 }
 
 @media (min-width: 768px) {
     .homeMain {
         min-height: 100svh;
+
+        .homeSection {
+            margin-left: 10%;
+            padding: 1rem;
+            border-radius: 10px;
+            background-color: rgb(237, 236, 236);
+        }
     }
 }
 
