--- a/src/RootLayout.module.scss
+++ b/src/RootLayout.module.scss
@@ -12,6 +12,8 @@ body {
         justify-content: center;
         align-items: center;
         background-color: rgb(255, 255, 255);
+        position: relative;
+        z-index: 10;
 
         nav {
             display: flex;
